tests/sksl/errors/EmptyBuffer.glsl
### Compilation failed:

error: 1: interface block 'B' must contain at least one field
buffer B {};
       ^
1 error
